--- a/DelphiProj/Test (For MKO Systems)/TestCode_ForHHRU_4_DLL1/PrimerDll_1_MT_4.dproj
+++ b/DelphiProj/Test (For MKO Systems)/TestCode_ForHHRU_4_DLL1/PrimerDll_1_MT_4.dproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <ProjectGuid>{CBB3CE67-522C-446B-B10A-21FA7B73D6F6}</ProjectGuid>
         <ProjectVersion>18.0</ProjectVersion>
-        <FrameworkType>None</FrameworkType>
+        <FrameworkType>VCL</FrameworkType>
         <MainSource>PrimerDll_1_MT_4.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
@@ -46,7 +46,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
         <SanitizedProjectName>PrimerDll_1_MT_4</SanitizedProjectName>
-        <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
         <GenDll>true</GenDll>
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
         <DCC_ExeOutput>.\$(Platform)\$(Config)</DCC_ExeOutput>
@@ -90,7 +90,13 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="unMain.pas"/>
+        <DCCReference Include="unLibrary1API.pas"/>
+        <DCCReference Include="unVariables.pas"/>
+        <DCCReference Include="unEditInputParams.pas">
+            <Form>formEditParams</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="unErrorException.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
